refactor: change redis V to Integer